k8s/Deploy.yaml
apiVersion : apps/v#Номер версии
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app : my-k8s-application
spec:
  selector:
    matchLabels:
      project: evg
  template:
    metadata:
      labels:
        project: evg
    spec:
      containers:
        - name : evg-web
          image: #вписываем имидж
          ports:
            - containerPort: 80
