k8s/DeployAutoscaling.yaml
apiVersion : apps/v#Номер версии
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app  : my-k8s-application
    env  : prod
    owner: evg
spec:
#  replicas: 2   # Реплика больше не нужна т.к мы используем автоскейлинг
  selector:
    matchLabels:
      project: evg2
  template:
    metadata:
      labels:
        project: evg2
    spec:
      containers:
        - name : evg2-web
          image: Вставляем имидж
          ports:
            - containerPort: 80
