k8s/pod-hello.yaml
apiVersion : v#Номер версии
kind: Pod
metadata:
  name: hellopod
spec:
  containers:
    - name : container-hellopod
      image: nginx:latest
      ports:
        - containerPort: 80
