k8s/pod-myweb.yaml
apiVersion : v#Номер версии
kind: Pod
metadata:
  name: my-web
  labels:
    env  : prod
    app  : main
    tier : frontend
    owner: Evg
spec:
  containers:
    - name : container-apache
      image: nginx:latest
      ports:
        - containerPort: 80
