k8s/service-1-loadbalancer-single.yaml
apiVersion : apps/v#Номер версии
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app : my-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      project: evg
  template:
    metadata:
      labels:
        project: evg   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name : evg-web
          image: Вписываем имидж
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels:
    env  : prod
    owner: evg
spec:
  selector:
    project: evg    # Selecting PODS with those Labels
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 80  # Port on POD
  type: LoadBalancer
