k8s/service-3-loadbalancer-autoscaling.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app : my-k8s-deployment
spec:
  selector:
    matchLabels:
      project: evg2
  template:
    metadata:
      labels:
        project: evg2   # Service will look for those PODS Labels!!!
    spec:
      containers:
        - name : evg2-web
          image: Вставить имидж
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels:
     env  : prod
     owner: evg
spec:
  selector:
    project: evg2      # Selecting PODs with those Labels
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80  # Port on Load Balancer
      targetPort: 80  # Port on Pod
  type: LoadBalancer
